# CMBtopology

./: .gitignore  LICENSE  README.markdown  README.md  pyproject.toml  requirements.txt  run_topology.ipynb  setup.py  test_topology.py  tests_test_topology.py
cmb_topology_scalar/: E3.py  E4.py  E5.py  E6.py  __init__.py  tools.py  tools_E2_E3_E4_E5.py  topology.py
docs/source/: conf.py  contributing.rst  index.rst  usage.rst
examples/: example_usage.py  run_topology.py
parameter_files/: default_E10.py  default_E2.py  default_E6.py  default_E7.py  default_E8.py
runs/E6_LAx_1.00_LBy_1.00_LCz_1.00_alphax_0.50_alphay_0.50_alphaz_0.50_x_0.00_y_0.00_z_0.00_l_max_5_accuracy_99_percent/: TT_corr_matrix_l_2_5_lp_2_5.npy  full_corr_matrix_l_2_5_lp_2_5.npy  k_max_list.npy
tests/: test_parameter_conditions.py  test_run_topology.py  test_topology.py
topology/: __init__.py  run_topology.py
topology/parameter_files/: default.py  default_E1.py  default_E3.py  default_E4.py  default_E6.py  default_E9.py  default_PS.py
topology/src/: E1.py  E10.py  E2.py  E3.py  E4.py  E5.py  E6.py  E7.py  E8.py  E9.py  __init__.py  config.py  tools.py  tools_E2_E3_E4_E5.py  topology.py
