[project]
name = "cmb-topology"
version = "0.1.0"
description = "A Python library for computing CMB covariance matrices for non-trivial topologies."
readme = "README.md"
authors = [{name = "Amirhossein Samandar", email = "amirsamandar@gamil.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "camb>=1.3.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "numba>=0.53",
    "tqdm>=4.60",
    "spherical>=1.0.14",
    "quaternionic>=1.0.13"
]

[project.urls]
Homepage = "https://github.com/CompactCollaboration/cmb-topology-covariance"
Repository = "https://github.com/CompactCollaboration/cmb-topology-covariance.git"
Issues = "https://github.com/CompactCollaboration/cmb-topology-covariance/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
