[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TopologyPy"
version = "0.1.0"
description = "A Python package for computing CMB covariance matrices for non-trivial topologies."
readme = "README.md"
authors = [
    { name = "Amirhossein Samandar", email = "amirhossein.samandar@case.edu" },
    { name = "Johannes R. Eskilt", email = "j.r.eskilt@astro.uio.no" },
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "camb>=1.3.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "numba>=0.53",
    "tqdm>=4.60",
    "spherical>=1.0.14",
    "quaternionic>=1.0.13"
]

[tool.setuptools.packages.find]
include = ["topology*", "examples*"]

[project.urls]
Homepage = "https://github.com/CompactCollaboration/TopologyPy"
Repository = "https://github.com/CompactCollaboration/TopologyPy.git"
Documentation = "https://topologypy.readthedocs.io/"
"COMPACT Collaboration" = "https://github.com/CompactCollaboration"

[project.scripts]
topologypy = "topology.run_topology:main"


